--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
     docker:
       - image: buildpack-deps:bionic
     steps:
+      - run:
+          name: Install Sudo
+          command: apt install sudo
       - checkout
       - run:
           name: Build MCPELauncher
