--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           command: apt update
       - run:
           name: Install Sudo
-          command: apt install -y sudo dpkg-dev
+          command: apt install -y sudo
       - checkout
       - run:
           name: Build MCPELauncher
